# rust_sdl2_cairo_example

./: .gitignore  Cargo.toml  README.md
src/: cairo_sdl.rs  main.rs
