[package]
name = "rust_sdl2_cairo_example"
version = "0.1.0"
authors = ["jinti"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2="0"
chrono="0.4"

[dependencies.cairo-rs]
version="0.8.1"
default-features = false
features = ["png"]